<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/weatherImageView"
        app:layout_constraintEnd_toStartOf="@+id/weatherImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weatherImageView" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="48dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/maxTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/maxLabel"
        app:layout_constraintStart_toEndOf="@+id/temperatureTextView"
        app:layout_constraintTop_toTopOf="@+id/temperatureTextView" />

    <TextView
        android:id="@+id/maxTempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/maxTempLabel"
        app:layout_constraintTop_toTopOf="@+id/maxTempLabel" />

    <TextView
        android:id="@+id/minTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/minLabel"
        app:layout_constraintStart_toEndOf="@+id/maxTempValue"
        app:layout_constraintTop_toTopOf="@+id/maxTempValue" />

    <TextView
        android:id="@+id/minTempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/minTempLabel"
        app:layout_constraintTop_toTopOf="@+id/minTempLabel" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/humidityLabel"
        app:layout_constraintStart_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/maxTempLabel" />

    <TextView
        android:id="@+id/humidityValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/humidity"
        app:layout_constraintTop_toTopOf="@+id/humidity" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/humidity"
        app:layout_constraintTop_toBottomOf="@+id/humidity" />
</androidx.constraintlayout.widget.ConstraintLayout>